test-suite/typecheck/pass/return_type_match.first
function f() -> Int { return 42; }
function g() -> Float { return 3.14; }
function h() -> Bool { return true; }
function i() -> String { return "ok"; }
function j() -> Unit { return; }
