test-suite/typecheck/fail/redefinition_function.first
function f() -> Int { return 1; }
function f() -> Int { return 2; }
